--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body>
+https://u.cubeupload.com/extralux/18.png<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body>
  
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka+One" />
@@ -21,7 +21,7 @@ body {
  overflow-x:hidden;  
  background:url()6px 80px no-repeat,  
  url()top center no-repeat,  
- url(https://i.imgur.com/CTtgxeT.png)top 130px center no-repeat,url(https://u.cubeupload.com/extralux/17.png)top center repeat-x,url(x)top center/cover fixed}  
+ url(https://i.imgur.com/CTtgxeT.png)top 130px center no-repeat,url(https://u.cubeupload.com/extralux/18.png)top center repeat-x,url(x)top center/cover fixed}  
  *{font-family:Helvetica}a{color:#0CF !important}  
  a:hover{color:#3E020B !important}not{  
 a{a),auto}  
